# christmas-namedraw

./: .gitignore  README.md  app.py  cache_refresh_token.py  config.example.json  config.json  deploy.ps1  main.bicep  requirements.txt
data/: participants.example.json  scenarios.json
deploy/: README.md  pyproject.toml  requirements.txt
deploy/data/: participants.json
deploy/namedraw/: auth.py  config.py
deploy/namedraw/services/: draw.py  mailer.py  participants.py
deploy/templates/: admin.html  login.html  run.html
namedraw/: __init__.py  routes.py
namedraw/services/: scenarios.py  tokens.py
scripts/: cache_refresh_token.py
static/css/: app.css
static/js/: app.js
templates/: index.html  layout.html
